--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,9 +1,7 @@
 FROM debian:stable
 
 RUN apt update
-RUN apt install vim -y
-RUN apt install mariadb-server -y
-RUN apt install iproute2 -y
+RUN apt install -y mariadb-server mariadb-client iproute2 vim
 
-ENTRYPOINT []
+ENTRYPOINT ["mariadbd"]
 
