--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,9 +1,8 @@
 FROM debian:stable
 
 RUN apt update
-RUN apt install vim -y
-RUN apt install iproute2 -y
-RUN apt install wordpress -y
-RUN apt install php-fpm -y
+RUN apt install -y php-fpm iproute2 vim 
 
-ENTRYPOINT []
+RUN apt install -y wget
+
+# ENTRYPOINT []
