--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,20 +10,20 @@ services:
       - ./requirements/nginx/conf/nginx.conf:/etc/nginx.conf
       - ./requirements/nginx/conf/default:/etc/nginx/sites-enabled/default
       - ./requirements/nginx/conf/certs:/etc/nginx/certs
-      # - ./requirements/app:/app
 
-        #   database:
-        #     build:
-        #       context: requirements/mariadb/
-        #       dockerfile: Dockerfile
-        #     ports:
-        #       - "3306:3306"
-        #     env_file:
-        #       - .env
-        #     volumes:
-        #       - database:/var/lib/mysql
-        # 
-        # volumes:
-        #   database:
-        # 
+  db:
+    build:
+      context: requirements/mariadb/
+      dockerfile: Dockerfile
+    ports:
+      - "3306:3306"
+    env_file:
+      - .env
+    volumes:
+      - database:/var/lib/mysql
+      # - ./requirements/mariadb/conf/50-server.cnf:/etc/mysql/mariadb.conf.d/50-server.cnf
+   
+volumes:
+  database:
+        
 
