install wordpress cli

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,15 +1,20 @@
+# wordpress
 FROM debian:bullseye
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     php-fpm=2:7.4+76 \
     iproute2=5.10.0-4 \
     vim=2:8.2.2434-3+deb11u1 \
-    wget=1.21-1+deb11u1 \
+    less=551-2 \
+    ca-certificates=20210119 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /var/www/html
+WORKDIR /usr/local/bin/
+ADD https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar wp
+RUN chmod +x wp
 
-RUN wget -O wordpress.tar.gz https://wordpress.org/wordpress-6.4.1.tar.gz -q \
-    && tar -xzf wordpress.tar.gz --strip-components=1 \
-    && rm wordpress.tar.gz
+WORKDIR /var/www/html
+RUN wp --allow-root --skip-plugins --skip-themes --skip-packages --insecure core download
+
+# ENTRYPOINT [ "bash" ]
