--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,3 +1,4 @@
+# nginx
 FROM debian:bullseye
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -8,7 +9,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+COPY ./conf/nginx.conf /etc/nginx/nginx.conf
+COPY ./conf/default /etc/nginx/sites-available/default
+
 COPY ./tools/entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/entrypoint.sh
+
+EXPOSE 443
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
