--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,43 +1,32 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-error_log /var/log/nginx/error.log;
-include /etc/nginx/modules-enabled/*.conf;
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
 
-events {
-        worker_connections 768;
-}
+    server_name         localhost;
 
-http {
+    ssl_certificate     /etc/ssl/nginx.crt;
+    ssl_certificate_key /etc/ssl/nginx.key;
 
-        ##
-        # Basic Settings
-        ##
+    root                /var/www/html;
+    index               index.html index.php;
 
-        sendfile on;
-        tcp_nopush on;
-        types_hash_max_size 2048;
+    ssl_protocols       TLSv1.3;
+    ssl_prefer_server_ciphers off;
 
-        include /etc/nginx/mime.types;
-        default_type application/octet-stream;
 
-        ##
-        # SSL Settings
-        ##
+    location / {
+        try_files $uri $uri/ =404;
+    }
 
-        ssl_protocols TLSv1.2;
-        ssl_prefer_server_ciphers on;
+    # pass PHP scripts to FastCGI server
+    #
+    #location ~ \.php$ {
+    #       include snippets/fastcgi-php.conf;
+    #
+    #       # With php-fpm (or other unix sockets):
+    #       fastcgi_pass unix:/run/php/php7.4-fpm.sock;
+    #       # With php-cgi (or other tcp sockets):
+    #       fastcgi_pass 127.0.0.1:9000;
+    #}
 
-        ##
-        # Logging Settings
-        ##
-
-        access_log /var/log/nginx/access.log;
-
-        ##
-        # Virtual Host Configs
-        ##
-
-        include /etc/nginx/conf.d/*.conf;
-        include /etc/nginx/sites-enabled/*;
 }
