--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,11 @@
-DATABASE=wordpress
-USERNAME=relkabou
-PASSWORD=pass
-HOSTNAME=mariadb
-MYSQL_ROOT_PASS=root
+# Mariadb
+MYSQL_DATABASE=wordpress_db
+MYSQL_USER=wordpress_user
+MYSQL_PASSWORD=wordpress_pass
+MYSQL_ROOT_PASSWORD=super+secret+pass
 
-
+# Wordpress
+WORDPRESS_DB_HOST=db
+WORDPRESS_DB_NAME=wordpress_db
+WORDPRESS_DB_USER=wordpress_user
+WORDPRESS_DB_PASS=super+secret+passwp
