--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -19,14 +19,13 @@ server {
     }
 
     # pass PHP scripts to FastCGI server
-    #
-    #location ~ \.php$ {
-    #       include snippets/fastcgi-php.conf;
-    #
-    #       # With php-fpm (or other unix sockets):
-    #       fastcgi_pass unix:/run/php/php7.4-fpm.sock;
-    #       # With php-cgi (or other tcp sockets):
-    #       fastcgi_pass 127.0.0.1:9000;
-    #}
-
+    location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
+    
+        # With php-fpm (or other unix sockets):
+        # fastcgi_pass unix:/run/php/php7.4-fpm.sock;
+        # With php-cgi (or other tcp sockets):
+        fastcgi_pass wordpress-fpm:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
 }
