declutter wordpress dockerfile

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,20 +1,22 @@
 # wordpress
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    php-fpm=2:7.4+76 \
-    iproute2=5.10.0-4 \
-    vim=2:8.2.2434-3+deb11u1 \
-    less=551-2 \
-    ca-certificates=20210119 \
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        php-fpm=2:7.4+76 \
+        php-mysql=2:7.4+76 \
+        wget=1.21-1+deb11u1 \
+        ca-certificates=20210119 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /usr/local/bin/
-ADD https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar wp
-RUN chmod +x wp
+COPY ./tools/setup.sh .
+RUN wget --progress=bar:force:noscroll -O wp \
+    https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+    && chmod +x wp setup.sh \
+    && mkdir -p /var/www/html/ \
+    && wp core download --path=/var/www/html --allow-root \
+    && ./setup.sh
 
-WORKDIR /var/www/html
-RUN wp --allow-root --skip-plugins --skip-themes --skip-packages --insecure core download
-
-# ENTRYPOINT [ "bash" ]
+ENTRYPOINT ["bash"]
