small improvement in the nginx image

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,31 +1,23 @@
 server {
     listen 443 ssl;
-    listen [::]:443 ssl;
 
-    server_name         localhost;
+    server_name         relkabou.1337.ma;
 
-    ssl_certificate     /etc/ssl/nginx.crt;
-    ssl_certificate_key /etc/ssl/nginx.key;
+    ssl_certificate     /etc/ssl/nginx/inception.crt;
+    ssl_certificate_key /etc/ssl/nginx/inception.key;
 
     root                /var/www/html;
-    index               index.html index.php;
+    index               index.php;
 
     ssl_protocols       TLSv1.3;
-    ssl_prefer_server_ciphers off;
-
 
     location / {
         try_files $uri $uri/ =404;
     }
 
-    # pass PHP scripts to FastCGI server
     location ~ \.php$ {
         include snippets/fastcgi-php.conf;
-    
-        # With php-fpm (or other unix sockets):
-        # fastcgi_pass unix:/run/php/php7.4-fpm.sock;
-        # With php-cgi (or other tcp sockets):
-        fastcgi_pass wordpress-fpm:9000;
+        fastcgi_pass website:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 }
