run php-fpm as pid 1

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,8 +1,13 @@
 # wordpress
 FROM debian:bullseye
 
+ENV WORDPRESS_DB_HOST db
+ENV WORDPRESS_DB_NAME wordpress_db
+ENV WORDPRESS_DB_USER wordpress_user
+ENV WORDPRESS_DB_PASS super+secret+passwp
+
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
+    && apt-get install -y --no-install-recommends --no-install-suggests \
         php-fpm=2:7.4+76 \
         php-mysql=2:7.4+76 \
         wget=1.21-1+deb11u1 \
@@ -10,13 +15,9 @@ RUN apt-get update \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /usr/local/bin/
-COPY ./tools/setup.sh .
-RUN wget --progress=bar:force:noscroll -O wp \
-    https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
-    && chmod +x wp setup.sh \
-    && mkdir -p /var/www/html/ \
-    && wp core download --path=/var/www/html --allow-root \
-    && ./setup.sh
+COPY ./tools/setup.sh /
 
-ENTRYPOINT ["bash"]
+ENTRYPOINT ["bash", "setup.sh"]
+
+CMD ["php-fpm7.4", "-F"]
+
