mariadb db over network nor sockets

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -7,15 +7,17 @@ ENV MYSQL_USER=wordpress_user
 ENV MYSQL_PASSWORD=wordpress_pass
 ENV MYSQL_ROOT_PASSWORD=super+secret+pass
 
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
+RUN set -x &&\
+    apt-get update \
+    && apt-get install -y --no-install-recommends --no-install-suggests \
         mariadb-server=1:10.5.21-0+deb11u1 \
+        netcat=1.10-46 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy the setup script into the image
+COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 COPY tools/setup.sh /usr/local/bin/
 
-# Set permissions for the setup script and ensure it runs on container start
-RUN chmod +x /usr/local/bin/setup.sh
-ENTRYPOINT ["/usr/local/bin/setup.sh"]
+ENTRYPOINT ["bash", "/usr/local/bin/setup.sh"]
+
+CMD ["mariadbd"]
