--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,7 +1,14 @@
 # mariadb
-FROM debian:bullseye
+FROM debian:bullseye-slim
 
-# Set environment variables
+# TODO: move only mariadb to bottom
+RUN apt-get update && apt-get install -y \
+    vim \
+    iputils-ping \
+    mariadb-server=1:10.5.21-0+deb11u1 \
+    mariadb-client=1:10.5.21-0+deb11u1
+
+# TODO: delete these environment variables
 ENV MYSQL_DATABASE=wordpress_db
 ENV MYSQL_USER=wordpress_user
 ENV MYSQL_PASSWORD=wordpress_pass
@@ -9,13 +16,12 @@ ENV MYSQL_ROOT_PASSWORD=super+secret+pass
 
 RUN set -x &&\
     apt-get update \
-    && apt-get install -y --no-install-recommends --no-install-suggests \
-        mariadb-server=1:10.5.21-0+deb11u1 \
-        netcat=1.10-46 \
+    # && apt-get install -y --no-install-recommends --no-install-suggests \
+    #     mariadb-server=1:10.5.21-0+deb11u1 \
+    #     netcat=1.10-46 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 COPY tools/setup.sh /usr/local/bin/
 
 ENTRYPOINT ["bash", "/usr/local/bin/setup.sh"]
