--- a/srcs/.env
+++ b/srcs/.env
@@ -1,11 +1,14 @@
-# Mariadb
-MYSQL_DATABASE=wordpress_db
-MYSQL_USER=wordpress_user
-MYSQL_PASSWORD=wordpress_pass
-MYSQL_ROOT_PASSWORD=super+secret+pass
+WP_HOST=172.18.0.2:3306
+WP_DB=wp_wordpress
+WP_USER=wp_user
+WP_PASS=wp_pass
 
-# Wordpress
-WORDPRESS_DB_HOST=db
-WORDPRESS_DB_NAME=wordpress_db
-WORDPRESS_DB_USER=wordpress_user
-WORDPRESS_DB_PASS=super+secret+passwp
+URL=relkabou.1337.ma
+TITLE=Inception
+ADMIN_USER=relkabou
+ADMIN_PASS=passwd
+ADMIN_MAIL=nomail@mail.com
+
+SERVER_NAME=relkabou.1337.ma
+HOST=172.18.0.4
+PORT=443
