add regular user to wp

--- a/srcs/.env
+++ b/srcs/.env
@@ -9,6 +9,9 @@ ADMIN_USER=relkabou
 ADMIN_PASS=passwd
 ADMIN_MAIL=nomail@mail.com
 
+WP_REGULAR_USER=josh
+WP_REGULAR_MAIL=josh@mail.com
+
 SERVER_NAME=relkabou.1337.ma
 HOST=172.18.0.4
 PORT=443
