change host name

--- a/srcs/.env
+++ b/srcs/.env
@@ -3,7 +3,7 @@ WP_DB=wp_wordpress
 WP_USER=wp_user
 WP_PASS=wp_pass
 
-URL=relkabou.1337.ma
+URL=relkabou.42.fr
 TITLE=Inception
 ADMIN_USER=relkabou
 ADMIN_PASS=passwd
@@ -12,6 +12,5 @@ ADMIN_MAIL=nomail@mail.com
 WP_REGULAR_USER=josh
 WP_REGULAR_MAIL=josh@mail.com
 
-SERVER_NAME=relkabou.1337.ma
 HOST=172.18.0.4
 PORT=443
