--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 443 ssl;
 
-    server_name         relkabou.1337.ma;
+    server_name         relkabou.42.fr;
 
     ssl_certificate     /etc/ssl/nginx/inception.crt;
     ssl_certificate_key /etc/ssl/nginx/inception.key;
