add pass to regular user

--- a/srcs/.env
+++ b/srcs/.env
@@ -9,8 +9,6 @@ ADMIN_USER=relkabou
 ADMIN_PASS=passwd
 ADMIN_MAIL=nomail@mail.com
 
-WP_REGULAR_USER=josh
-WP_REGULAR_MAIL=josh@mail.com
-
-HOST=172.18.0.4
-PORT=443
+WP_REGULAR_USER=redouane
+WP_REGULAR_PASS=passwd
+WP_REGULAR_MAIL=redouane@mail.com
