add label metadata

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,5 +1,6 @@
 # mariadb
 FROM debian:bullseye-slim
+LABEL authors="kaboussi"
 
 RUN set -x &&\
     apt-get update && apt-get install -y --no-install-recommends --no-install-suggests \
