--- a/srcs/.env
+++ b/srcs/.env
@@ -14,3 +14,6 @@ ADMIN_MAIL=nomail@mail.com
 WP_REGULAR_USER=redouane
 WP_REGULAR_PASS=passwd
 WP_REGULAR_MAIL=redouane@mail.com
+
+FTP_USER=foo
+FTP_PASS=bar
