--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -6,13 +6,24 @@ server {
     ssl_certificate     /etc/ssl/nginx/inception.crt;
     ssl_certificate_key /etc/ssl/nginx/inception.key;
 
-    root                /var/www/html;
-    index               index.php;
 
     ssl_protocols       TLSv1.3;
 
+    root                /var/www/html;
+    index               index.php;
+
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.php?$args;
+    }
+
+    location /adminer {
+        alias /var/www/html/;
+        index adminer.php;
+        location ~ \.php$ {
+            include snippets/fastcgi-php.conf;
+            fastcgi_pass adminer:8080;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+        }
     }
 
     location ~ \.php$ {
