--- a/srcs/requirements/adminer/Dockerfile
+++ b/srcs/requirements/adminer/Dockerfile
@@ -2,8 +2,6 @@
 FROM debian:bullseye-slim AS builder
 LABEL authors="kaboussi"
 
-WORKDIR /var/www/html
-
 RUN set -x &&\
     apt-get update && apt-get install -y --no-install-recommends --no-install-suggests \
       wget=1.21-1+deb11u1 \
@@ -13,7 +11,6 @@ RUN set -x &&\
     apt-get remove --purge --auto-remove wget ca-certificates -y &&\
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
-COPY tools/setup.sh /usr/bin/setup.sh
 
 FROM debian:bullseye-slim
 
@@ -26,7 +23,7 @@ RUN set -x &&\
       php-mysql=2:7.4+76 &&\
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder /var/www/html/adminer.php ./adminer.php
+COPY --from=builder /adminer.php adminer.php
 COPY tools/setup.sh /usr/bin/setup.sh
 
 ENTRYPOINT [ "bash", "/usr/bin/setup.sh" ]
