--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,23 +1,20 @@
 server {
     listen 443 ssl;
+    server_name relkabou.42.fr;
 
-    server_name         relkabou.42.fr;
-
-    ssl_certificate     /etc/ssl/nginx/inception.crt;
+    ssl_certificate /etc/ssl/nginx/inception.crt;
     ssl_certificate_key /etc/ssl/nginx/inception.key;
+    ssl_protocols TLSv1.3;
 
-
-    ssl_protocols       TLSv1.3;
-
-    root                /var/www/html;
-    index               index.php;
+    root /var/www/html;
+    index index.php;
 
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
 
     location /adminer {
-        alias /var/www/html/;
+        alias /var/www/html;
         index adminer.php;
         location ~ \.php$ {
             include snippets/fastcgi-php.conf;
