--- a/srcs/.env
+++ b/srcs/.env
@@ -17,3 +17,7 @@ WP_REGULAR_MAIL=redouane@mail.com
 
 FTP_USER=foo
 FTP_PASS=bar
+
+WP_REDIS_HOST=172.18.0.7
+WP_REDIS_PORT=6379
+WP_REDIS_DATABASES=1
