--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -14,7 +14,7 @@ server {
     }
 
     location /adminer {
-        alias /var/www/html;
+        alias /var/www/html/;
         index adminer.php;
         location ~ \.php$ {
             include snippets/fastcgi-php.conf;
