--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -97,6 +97,20 @@ services:
       inception:
         ipv4_address: 172.18.0.7
 
+# Static
+  static:
+    build:
+      context: requirements/static/
+    container_name: static
+    env_file:
+      - .env
+    ports:
+      - 8080:8080
+    depends_on:
+      - wordpress
+    networks:
+      inception:
+        ipv4_address: 172.18.0.8
 
 volumes:
   wp_volume: 
