add flask to nginx.conf

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -23,6 +23,12 @@ server {
         }
     }
 
+    location /static {
+        proxy_pass http://static:5000;
+        include /etc/nginx/proxy_params;
+        proxy_redirect off;
+    }
+
     location ~ \.php$ {
         include snippets/fastcgi-php.conf;
         fastcgi_pass wordpress:9000;
