--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -24,9 +24,11 @@ server {
     }
 
     location /static {
-        proxy_pass http://static:5000;
-        include /etc/nginx/proxy_params;
-        proxy_redirect off;
+        proxy_pass http://static:5000/;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Prefix /;
     }
 
     location ~ \.php$ {
