feat: Add environment variables to WordPress setup script
- Added environment variables for database connection and WordPress configuration in `.env` file
- Modified `setup.sh` script to use the environment variables for database setup and configuration

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,23 +1,21 @@
+# Mariadb
 DB_ROOT_PASS=root
-
-WP_HOST=172.18.0.2:3306
 WP_DB=wp_wordpress
 WP_USER=wp_user
 WP_PASS=wp_pass
 
+# Wordpress admin
 URL=relkabou.42.fr
 TITLE=Inception
 ADMIN_USER=relkabou
 ADMIN_PASS=passwd
 ADMIN_MAIL=nomail@mail.com
 
+# Wordpress user
 WP_REGULAR_USER=redouane
 WP_REGULAR_PASS=passwd
 WP_REGULAR_MAIL=redouane@mail.com
 
+# FTP
 FTP_USER=foo
 FTP_PASS=bar
-
-WP_REDIS_HOST=172.18.0.7
-WP_REDIS_PORT=6379
-WP_REDIS_DATABASES=1
